// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders Button with variant contained 1`] = `
<div>
  <button
    class="inline-flex rounded-lg text-center font-medium px-5 py-2.5 text-sm bg-primary text-white hover:bg-primary-hover text-white dark:bg-primary-dark dark:hover:bg-primary-hoverDark"
    type="button"
  >
    contained
  </button>
</div>
`;

exports[`Button > renders Button with variant ghost 1`] = `
<div>
  <button
    class="inline-flex rounded-lg text-center font-medium px-5 py-2.5 text-sm text-primary hover:bg-primary-hoverLight hover:text-primary dark:text-primary-dark dark:hover:bg-primary-hover dark:hover:bg-primary-hoverDark dark:hover:text-white"
    type="button"
  >
    ghost
  </button>
</div>
`;

exports[`Button > renders Button with variant outlined 1`] = `
<div>
  <button
    class="inline-flex rounded-lg text-center font-medium px-5 py-2.5 text-sm outline outline-1 hover:text-white text-primary outline-primary hover:bg-primary hover:outline-primary dark:text-primary-dark dark:outline-primary-dark hover:dark:bg-primary-dark"
    type="button"
  >
    outlined
  </button>
</div>
`;
